--- a/readme
+++ b/readme
@@ -54,5 +54,5 @@ Dzięki temu ERLI grupuje oferty jako warianty jednego produktu.
 
 ---
 
-## PROJEKT WYKONANY PRZEZ 
+## Projekt wykonany przez 
 Adrian 
